--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,10 @@ authors = ["patrick o'leary <pjaol@pjaol.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<4.0"
-ipython = "^8.30.0"
-ipywidgets = "^8.1.5"
-pandas = "^2.2.3"
-
+python = ">=3.10,<3.11"
+pandas = "2.2.2"  # Match Colab's compatible pandas version
+ipython = "7.34.0"  # Match Colab's compatible ipython version
+ipywidgets = "*"
 
 [tool.poetry.group.dev.dependencies]
 jupyterlab = "^4.3.3"
