--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = ">=3.10,<3.11"
 pandas = "2.2.2"  # Match Colab's compatible pandas version
 ipython = "7.34.0"  # Match Colab's compatible ipython version
-ipywidgets = "*"
+panel = "^1.3.1"
 
 [tool.poetry.group.dev.dependencies]
 jupyterlab = "^4.3.3"
