--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.10,<3.11"
 pandas = "2.2.2"  # Match Colab's compatible pandas version
 ipython = "7.34.0"  # Match Colab's compatible ipython version
 panel = "^1.3.1"
+google-colab = {version = "*", optional = true}
 
 [tool.poetry.group.dev.dependencies]
 jupyterlab = "^4.3.3"
