--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,17 @@ version = "0.0.0"
 description = ""
 authors = ["patrick o'leary <pjaol@pjaol.com>"]
 readme = "README.md"
+repository = "https://github.com/thevgergroup/ipy-compare"
+homepage = "https://github.com/thevgergroup/ipy-compare"
+keywords = ["data", "analysis", "visualization", "pandas", "ipython", "panel", "google-colab", "jupyterlab"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Topic :: Software Development :: Libraries :: Python Modules"
+]
+license = "MIT"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.11"
